--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3.0.3
         with:
-         dotnet-version: 6.0.1
+         dotnet-version: 6.0.x
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
